# Python-ci-build-log-analyzer

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  rules.yaml
.github/workflows/: tests.yml
docs/: DESIGN_NOTES.md  MAC_COMMANDS.md  SAMPLE_DEMO_OUTPUT.txt
src/ci_log_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  html_report.py  models.py  rules.py  rules_config.py
tests/: test_analyzer.py
